--- a/src/main/frontend/src/app/tasks/tasks.component.html
+++ b/src/main/frontend/src/app/tasks/tasks.component.html
@@ -1,9 +1,9 @@
 <div class="row">
     <div class="col-md-2">&nbsp;</div>
     <div class="col-md-8">
-        <div id="tasksPanel" class="panel">
+        <div id="tasksPanel" class="panel panel-default">
             <div class="panel-heading">
-                <h3 class="cars-title">My Tasks</h3>
+                <h3 class="panel-title">My Tasks</h3>
             </div>
 
             <div class="panel-body">
